kalimat-cash-main-backend/backend/k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: internship2024
  creationTimestamp: null
  labels:
    name: kalimatcash
  name: kalimatcash-internship2024
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      service: kalimatcash-internship2024
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: kalimatcash-internship2024
    spec:
      containers:
      - name: kalimatcash-internship2024
        image: docker.et3.co/internship2024.kalimatcash:latest
        command: ["sh"]
        args: ["runserver.sh"]
        volumeMounts:
        - mountPath: /usr/src/app/data
          name: kalimatcash-internship2024-volume-mount
        - mountPath: /usr/src/media
          name: kalimatcash-nginx-internship2024-volume-mount
        - mountPath: /usr/src/app/static
          name: kalimatcash-static-internship2024-volume-mount
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: kalimatcash-internship2024-volume-mount
        persistentVolumeClaim:
          claimName: kalimatcash-internship2024-pvc
      - name: kalimatcash-nginx-internship2024-volume-mount
        persistentVolumeClaim:
          claimName: kalimatcash-nginx-internship2024-pvc
      - name: kalimatcash-static-internship2024-volume-mount
        persistentVolumeClaim:
          claimName: kalimatcash-static-internship2024-pvc
