kalimat-cash-main-backend/backend/k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kalimatcash-internship2024
  namespace: internship2024
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
spec:
  tls:
  - hosts:
    - kalimatcash.internship2024.et3.co
    secretName: kalimatcash.internship2024.et3.co-cert
  rules:
  - host: kalimatcash.internship2024.et3.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kalimatcash-internship2024
            port: 
              number: 8002
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: kalimatcash-nginx-internship2024
            port: 
              number: 80
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: kalimatcash-nginx-internship2024
            port: 
              number: 80
